# open-chat

./: ,add-proposal-source  .dockerignore  .gitignore  .gitmodules  .prettierignore  Cargo.toml  Dockerfile  Dockerfile.oc  Dockerfile.oc2  Dockerfile.ocui  LICENSE  README.md  canbench.yml  canbench_results.yml  canister_commit_ids.json  canister_ids.json  claude.md  cmd_file  commands.txt  compress-wasm.sh  deploy-full-env-local.sh  deploy-local.sh  deploy-prod-test.sh  deploy-prod.sh  dfx.json  docker-build.sh  functions.txt  future-architecture.md  generate-wasm.sh  oc.md  p2p.md  package-lock.json  package.json  proposal_summary.md  review.md  rust-toolchain.toml  sns.yml  sns_proposal.sh  todo.md  tsconfig.json  (+6 more)
backend/benchmarks/: Cargo.toml
backend/benchmarks/src/: chat_events.rs  main.rs
backend/bots/api/: Cargo.toml
backend/bots/sdk/: Cargo.toml
backend/bots/sdk/src/: agent.rs  lib.rs
backend/bots/sdk_canister/: Cargo.toml
backend/bots/sdk_canister/src/: env.rs  lib.rs  openchat_client.rs
backend/canister_installer/: Cargo.toml
backend/canister_installer/local-bin/: callback_canister_impl-opt.wasm  group_canister_impl-opt.wasm.xz  user_index_canister_impl-opt.wasm
backend/canister_installer/src/: lib.rs  main.rs
backend/canister_upgrade_proposal_builder/: .gitignore  Cargo.toml
backend/canister_upgrade_proposal_builder/src/: lib.rs  main.rs
backend/canister_upgrader/: Cargo.toml
backend/canister_upgrader/local-bin/: group_index_canister_impl-opt.wasm  ledger_sync_canister_impl-opt.wasm  user_canister_impl-opt.wasm.xz
backend/canister_upgrader/src/: lib.rs  main.rs
backend/data_generator/: Cargo.toml
backend/data_generator/src/: main.rs
backend/integration_tests/: .gitignore  Cargo.toml  cycles_wallet.wasm  run.sh
backend/integration_tests/src/: account_linking_tests.rs  airdrop_bot_tests.rs  batched_summary_and_event_tests.rs  bot_tests.rs  change_group_role_tests.rs  change_role_tests.rs  chit_tests.rs  create_group_tests.rs  cycles_dispenser_tests.rs  delete_direct_chat_tests.rs  delete_group_tests.rs  delete_history_tests.rs  delete_message_tests.rs  delete_user_tests.rs  diamond_membership_tests.rs  disappearing_message_tests.rs  edit_message_tests.rs  env.rs  escrow_tests.rs  fire_and_forget_handler_tests.rs  freeze_group_tests.rs  freeze_user_tests.rs  gated_group_tests.rs  get_chat_events_tests.rs  get_updates_tests.rs  group_and_community_verification_test.rs  group_and_community_verification_tests.rs  identity_tests.rs  initial_state_and_updates_tests.rs  join_group_tests.rs  last_online_date_tests.rs  lib.rs  main.rs  make_super_admin_tests.rs  mentions_tests.rs  message_activity_tests.rs  moderation_tests.rs  notification_tests.rs  online_users_aggregator_tests.rs  online_users_tests.rs  (+33 more)
backend/integration_tests/src/client/: airdrop_bot.rs  bot_api_gateway.rs  (+24 more)
backend/legacy_bots/api/: Cargo.toml
backend/legacy_bots/c2c_client/: Cargo.toml
backend/libraries/activity_notification_state/: Cargo.toml
backend/libraries/canister_agent/: Cargo.toml
backend/libraries/canister_agent_utils/: Cargo.toml
backend/libraries/canister_client/: Cargo.toml
backend/libraries/canister_client_macros/: Cargo.toml
backend/libraries/canister_logger/: Cargo.toml
backend/libraries/canister_timer_jobs/: Cargo.toml
backend/libraries/canister_tracing_macros/: Cargo.toml
backend/libraries/chat_events/: Cargo.toml
backend/libraries/cycles_dispenser_client/: Cargo.toml
backend/libraries/dynamodb_index_store/: Cargo.toml
backend/libraries/email_magic_links/: Cargo.toml
backend/libraries/email_utils/: Cargo.toml
backend/personhood_spike/: Cargo.toml  README.md  canbench.yml  canbench_results.yml
backend/personhood_spike/src/: inference.rs  jpeg.rs  main.rs
backend/translation_tool/: Cargo.toml
backend/translation_tool/src/: main.rs  merge_latest_approved.rs
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  navigation.rs  update_manager.rs
frontend/tauri-plugin-oc/: .gitignore  Cargo.toml  OTA_UPDATES.md  README.md  build.rs  package-lock.json  package.json  tsconfig.json
frontend/tauri-plugin-oc/android/: .gitignore  build.gradle.kts  settings.gradle
frontend/tauri-plugin-oc/guest-js/: index.ts
frontend/tauri-plugin-oc/ios/: Package.swift  README.md
frontend/tauri-plugin-oc/permissions/: default.toml
frontend/tauri-plugin-oc/src/: bundle_manager.rs  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  update_manager.rs
v2/: Cargo.toml  canister_ids.json  deploy-full-env-local.sh  deploy-local.sh  deploy-prod-test.sh  deploy-prod.sh  dfx.json  generate-wasm.sh  metrics.md  rust-toolchain.toml  update_wasm.sh  upgrade-canister-local.sh  upgrade-canister-prod-test.sh  upgrade-canister-prod.sh  validate-candid-matches-rust.sh  validate-candid-syntax.sh  validate-candid.sh
v2/backend/: Cargo.toml  notes.md
v2/backend/canister_installer/: Cargo.toml
v2/backend/canister_upgrader/: Cargo.toml
v2/backend/data_generator/: Cargo.toml
v2/backend/integration_tests/: .gitignore  Cargo.toml  run.sh  setup-and-cargo-test.sh
v2/backend/notification_service/: Cargo.toml
v2/backend/push_notification_service/: Cargo.toml  README.md
v2/backend/shared/: Cargo.toml
v2/backend/sms_service/: Cargo.toml
v2/backend/testenv_setup/: Cargo.toml  setup.sh
v2/backend/testnet_setup/: Cargo.toml
v2/backend/types/: Cargo.toml  can.did
v2/frontend/: .env.production  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  build_dev.sh  build_prod.sh  build_prod_test.sh  codegen.sh  index.html  npm-shrinkwrap.json  package.json  readme.md  rollup.config.js  svelte.config.js  tsconfig.json  vite.config.js
v2/frontend/.storybook/: addons.js  main.js  preview.js
v2/frontend/declarations/: svelte-markdown.d.ts
v2/frontend/public/: global.css  index.html  openchat.webmanifest  reset.css
v2/frontend/src/: App.svelte  env.d.ts  main.ts  routes.ts  types.d.ts
(+11872 files in other folders)
