[workspace]
members = [
    "backend/canister_installer",
    "backend/canister_upgrader",
    "backend/canisters/group/api",
    "backend/canisters/group/c2c_client",
    "backend/canisters/group/client",
    "backend/canisters/group/impl",
    "backend/canisters/group_index/api",
    "backend/canisters/group_index/c2c_client",
    "backend/canisters/group_index/client",
    "backend/canisters/group_index/impl",
    "backend/canisters/notifications/api",
    "backend/canisters/notifications/c2c_client",
    "backend/canisters/notifications/client",
    "backend/canisters/notifications/impl",
    "backend/canisters/online_users_aggregator/api",
    "backend/canisters/online_users_aggregator/client",
    "backend/canisters/online_users_aggregator/impl",
    "backend/canisters/user/api",
    "backend/canisters/user/c2c_client",
    "backend/canisters/user/client",
    "backend/canisters/user/impl",
    "backend/canisters/user_index/api",
    "backend/canisters/user_index/c2c_client",
    "backend/canisters/user_index/client",
    "backend/canisters/user_index/impl",
    "backend/data_generator",
    "backend/libraries/canister_client",
    "backend/libraries/canister_client_macros",
    "backend/libraries/canister_logger",
    "backend/libraries/chat_events",
    "backend/libraries/cycles_utils",
    "backend/libraries/http_request",
    "backend/libraries/ledger_utils",
    "backend/libraries/search",
    "backend/libraries/serializer",
    "backend/libraries/types",
    "backend/libraries/utils",
    "backend/notification_pusher/aws",
    "backend/notification_pusher/cli",
    "backend/notification_pusher/shared",
    "backend/sms_service"
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
