[workspace]
members = [
    "backend/canister_installer",
    "backend/canister_upgrader",
    "backend/canisters/group/api",
    "backend/canisters/group/c2c_client",
    "backend/canisters/group/client",
    "backend/canisters/group/impl",
    "backend/canisters/group_index/api",
    "backend/canisters/group_index/c2c_client",
    "backend/canisters/group_index/client",
    "backend/canisters/group_index/impl",
    "backend/canisters/notifications/api",
    "backend/canisters/notifications/c2c_client",
    "backend/canisters/notifications/client",
    "backend/canisters/notifications/impl",
    "backend/canisters/online_users_aggregator/api",
    "backend/canisters/online_users_aggregator/client",
    "backend/canisters/online_users_aggregator/impl",
    "backend/canisters/open_storage_index/api",
    "backend/canisters/open_storage_index/c2c_client",
    "backend/canisters/user/api",
    "backend/canisters/user/c2c_client",
    "backend/canisters/user/client",
    "backend/canisters/user/impl",
    "backend/canisters/user_index/api",
    "backend/canisters/user_index/c2c_client",
    "backend/canisters/user_index/client",
    "backend/canisters/user_index/impl",
    "backend/data_generator",
    "backend/libraries/canister_api_macros",
    "backend/libraries/canister_client",
    "backend/libraries/canister_client_macros",
    "backend/libraries/canister_logger",
    "backend/libraries/canister_state_macros",
    "backend/libraries/chat_events",
    "backend/libraries/dynamodb_index_store",
    "backend/libraries/http_request",
    "backend/libraries/index_store",
    "backend/libraries/ledger_utils",
    "backend/libraries/search",
    "backend/libraries/serializer",
    "backend/libraries/types",
    "backend/libraries/utils",
    "backend/notification_pusher/aws",
    "backend/notification_pusher/cli",
    "backend/notification_pusher/core",
    "backend/sms_sender/aws",
    "backend/sms_sender/core"
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
ic-cdk = { git = "https://github.com/hpeebles/cdk-rs", rev = "2731184ce08496ab26eb8e1a4b932fb303479013" }
ic-cdk-macros = { git = "https://github.com/hpeebles/cdk-rs", rev = "2731184ce08496ab26eb8e1a4b932fb303479013" }
ic-ledger-types = { git = "https://github.com/hpeebles/cdk-rs", rev = "2731184ce08496ab26eb8e1a4b932fb303479013" }