[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
canbench-rs = { workspace = true }
candid = { workspace = true }
chat_events = { path = "../libraries/chat_events" }
event_store_producer = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
stable_memory_map = { path = "../libraries/stable_memory_map" }
types = { path = "../libraries/types" }
